--- a/app/assets/stylesheets/all/_giving.css.scss
+++ b/app/assets/stylesheets/all/_giving.css.scss
@@ -21,7 +21,6 @@
  .label {
     line-height: 1.2;
     font-size: 12px;
-    margin-top: 3px;
     display: inline-block;
     color: $gray_4;
   }
